// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EpicSelection ui is checked 1`] = `
<Label
  className="d-flex m-0 align-items-center"
  tag="label"
  widths={
    Array [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ]
  }
>
  <Input
    checked={true}
    className="m-0 ml-1 mr-2 d-inline-block position-static"
    onChange={[Function]}
    type="checkbox"
  />
</Label>
`;

exports[`Component: EpicSelection ui is not checked 1`] = `
<Label
  className="d-flex m-0 align-items-center"
  tag="label"
  widths={
    Array [
      "xs",
      "sm",
      "md",
      "lg",
      "xl",
    ]
  }
>
  <Input
    checked={false}
    className="m-0 ml-1 mr-2 d-inline-block position-static"
    onChange={[Function]}
    type="checkbox"
  />
</Label>
`;
